// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form linter should return error FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться 
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться 
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_ITEM_INDENT_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_ITEM_INDENT_IS_INVALID",
    "error": "Модификатора indent-b у элементов формы content-item должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_ITEM_INDENT_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_ITEM_INDENT_IS_INVALID",
    "error": "Модификатора indent-b у элементов формы content-item должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_VERTICAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ контентного элемента со значением space-v 
        должен быть на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.CONTENT_VERTICAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_VERTICAL_SPACE_IS_INVALID",
    "error": "Вертикальный внутренний отступ контентного элемента со значением space-v 
        должен быть на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 8,
      },
      "start": Object {
        "column": 16,
        "line": 3,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_HORIZONTAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться 
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_HORIZONTAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.CONTENT_HORIZONTAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ контентного элемента должен задаваться 
        с помощью модификатора space-h на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_TEXT_SIZE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_TEXT_SIZE_IS_INVALID",
    "error": "Все текстовые блоки в заголовке формы (элемент header) должны быть со значением 
        модификатора size на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 12,
      },
      "start": Object {
        "column": 24,
        "line": 7,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_TEXT_SIZE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_TEXT_SIZE_IS_INVALID",
    "error": "Все текстовые блоки в заголовке формы (элемент header) должны быть со значением 
        модификатора size на 2 шага больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 18,
        "line": 19,
      },
      "start": Object {
        "column": 17,
        "line": 14,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_VERTICAL_SPACE_IS_INVALID 0 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_VERTICAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;

exports[`test form linter should return error FORM.HEADER_VERTICAL_SPACE_IS_INVALID 1 1`] = `
Array [
  Object {
    "code": "FORM.HEADER_VERTICAL_SPACE_IS_INVALID",
    "error": "Горизонтальный внутренний отступ должен быть на 1 шаг больше эталонного размера",
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 8,
      },
      "start": Object {
        "column": 9,
        "line": 4,
      },
    },
  },
]
`;
